recetas de postres y carnes

--- a/index.html
+++ b/index.html
@@ -103,24 +103,29 @@
                         <p><h1 class="h1_cabecera_seccion">Últimas recetas</h1>
                         <hr>
                         <h1 class="cabecera_receta">Arroz con pollo</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta ea maxime eos explicabo dignissimos tenetur iste
-                        omnis! Ipsa fugit in minus illum. Sequi voluptatum, excepturi optio enim consequatur provident corrupti nesciunt quis
-                        cumque quibusdam. <a href="receta">Leer más...</a></p>
+                        Pon tu paella a fuego medio (para quien no lo sepa, el recipiente se llama paella, no paellera) con 
+                        aceite de oliva que cubra justo el fondo y dora los trozos de pollo con un poco de sal hasta que queden con 
+                        un toque doradito por todos lados. Yo lo que hago es ir dándoles la vuelta con unas pinzas de cocina, y se tardan 
+                        unos 10 minutos. Reserva en un plato aparte.
+                        <a href="pages/arrocesYpastas/arrozConPollo.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tallarines a la carbonara</h1>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ab doloribus ea esse inventore magnam mollitia totam
-                        perspiciatis, placeat quia blanditiis repellendus laboriosam, libero fuga rerum. Doloremque vel eveniet minus possimus
-                        tempore totam, rerum provident, illum tempora assumenda ex cumque voluptatum eos? Totam aspernatur repudiandae nesciunt
-                        facere beatae tempora ratione amet incidunt veniam molestias vero, tenetur, quaerat nam neque ut? <a href="receta">Leer más...</a></p>
+                        <p><h1 class="cabecera_receta">Tagliatelle a la carbonara</h1>
+                        Como la elaboración es muy rápida, empieza cociendo la pasta y mientras tienes tiempo para preparar el resto de la receta.
+                        Pon abundante agua a cocer en una olla con una cucharadita de postre de sal y a fuego fuerte.
+                        Cuando hierva el agua echa los tagliatelle y en cuanto hierva el agua de nuevo (tardará muy poco) 
+                        empieza a contar los minutos que indique el paquete. En mi caso han sido 12 minutos.
+                        Cuando esté lista la pasta escúrrela.
+                        <a href="pages/arrocesYpastas/tagliatelleCarbonara.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tarta de queso</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
-                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
-                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                        <p><h1 class="cabecera_receta">Torrijas</h1>
+                        Pela un limón intentando que la piel quede con el mínimo posible de parte blanca para que no amargue.
+                        Lo primero que vamos a hacer es infusionar la leche. Ponla en un cazo a fuego medio-alto junto con la 
+                        rama de canela y la piel del limón hasta que hierva. 
+                        <a href="pages/postres/torrijas.html">Leer más...</a></p>
                     </article>
                 </section>
             </div>
