--- a/pages/carnes/index.html
+++ b/pages/carnes/index.html
@@ -56,7 +56,7 @@
                         <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
                         <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
                         <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>  
-                    </ul>
+                    </ul>	
                 </div>
             </div>
         </div> <!-- este div cierra el menú-->
@@ -69,32 +69,34 @@
                         
                         <img src="../../img/recetas/carnes/carnes.jpg" alt="carnes" class="img-fluid">
                         <hr>
-                        <h1 class="cabecera_receta">Albóndigas</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta ea maxime eos explicabo dignissimos tenetur iste
-                        omnis! Ipsa fugit in minus illum. Sequi voluptatum, excepturi optio enim consequatur provident corrupti nesciunt quis
-                        cumque quibusdam. <a href="receta">Leer más...</a></p>
+                        <h1 class="cabecera_receta">Solomillo al whisky</h1>
+                        Empezamos preparando las patatas fritas y te voy a ofrecer poder cocinarlas de forma clásica 
+						friéndolas o bien a horno que también quedan muy bien. Pélalas y córtalas en los típicos palitos 
+						con un cuchillo o mejor aún con ayuda de una mandolina.<a href="solomillo.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
                         <p><h1 class="cabecera_receta">Callos</h1>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ab doloribus ea esse inventore magnam mollitia totam
-                        perspiciatis, placeat quia blanditiis repellendus laboriosam, libero fuga rerum. Doloremque vel eveniet minus possimus
-                        tempore totam, rerum provident, illum tempora assumenda ex cumque voluptatum eos? Totam aspernatur repudiandae nesciunt
-                        facere beatae tempora ratione amet incidunt veniam molestias vero, tenetur, quaerat nam neque ut? <a href="receta">Leer más...</a></p>
+                        Pon a remojo los garbanzos en un bol con abundante agua de forma que estén totalmente 
+						cubiertos y sobre bastante agua por encima de ellos, durante una noche entera (al menos 10-12 horas).
+						Al día siguiente escurre los garbanzos y en el propio escurridor lávalos un poco con un chorro de agua fría.
+                        <a href="callos.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Croquetas</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
-                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
-                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                        <p><h1 class="cabecera_receta">Croquetas de puchero</h1>
+                        Para esta receta he utilizado la carne que me sobró al preparar cocido en casa. En el blog tengo las recetas del cocido madrileño tradicional y el caldo de pollo casero con garbanzos. 
+						Esta vez preparé un cocido en el que las carnes eran pollo campero, ternera para guisar y chorizo, y son las que he utilizado para estas croquetas.
+						Desmenuza las carnes deshilachándolas o directamente cortándolas en trocitos muy pequeños. También puedes preferir utilizar trozos algo más grandes 
+                        <a href="croquetas.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Solomillo al Whisky</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
-                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
-                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                        <p><h1 class="cabecera_receta">Albóndigas a la jardinera</h1>
+                        Pon la miga de pan en un bol y vierte encima de la leche. Remueve y aplasta para que se ablande.
+						Pela y pica el ajo muy muy finito, y añádelo al bol junto con la carne, el huevo y un poco de sal. 
+						Mézclalo todo bien hasta obtener una masa homogénea.
+						<a href="albondigas.html">Leer más...</a></p>
                     </article>
                 </section>
             </div>
