Incluímos contendio, falta hacer adaptativo

--- a/pages/arrocesYpastas/index.html
+++ b/pages/arrocesYpastas/index.html
@@ -65,36 +65,42 @@
                 <!-- Sección de novedades-->
                 <section>
                     <article>
-                        <p><h1 class="h1_cabecera_seccion">Arroces y Pastas</h1>
+                        <p><h1 class="h1_cabecera_seccion">Arroces y pastas</h1>
                         
                         <img src="../../img/recetas/arrocesPastas/arroces-pastas.jpg" alt="arroces y pastas" class="img-fluid">
                         <hr>
-                        <h1 class="cabecera_receta">Arroz Mixto</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta ea maxime eos explicabo dignissimos tenetur iste
-                        omnis! Ipsa fugit in minus illum. Sequi voluptatum, excepturi optio enim consequatur provident corrupti nesciunt quis
-                        cumque quibusdam. <a href="receta">Leer más...</a></p>
+                        <h1 class="cabecera_receta">Arroz mixto</h1>
+                        Lava muy bien la sepia, retírale la piel y las partes internas y córtala en trozos. 
+                        Muchas veces venden las sepias ya arregladas en la pescadería así que si quieres ahorrar tiempo es la mejor opción.
+                        Lava los gambones y déjalos escurriendo junto con la sepia. 
+                        <a href="arrozMixto.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Arroz con Pollo</h1>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ab doloribus ea esse inventore magnam mollitia totam
-                        perspiciatis, placeat quia blanditiis repellendus laboriosam, libero fuga rerum. Doloremque vel eveniet minus possimus
-                        tempore totam, rerum provident, illum tempora assumenda ex cumque voluptatum eos? Totam aspernatur repudiandae nesciunt
-                        facere beatae tempora ratione amet incidunt veniam molestias vero, tenetur, quaerat nam neque ut? <a href="receta">Leer más...</a></p>
+                        <p><h1 class="cabecera_receta">Arroz con pollo</h1>
+                        Pon tu paella a fuego medio (para quien no lo sepa, el recipiente se llama paella, no paellera) con 
+                        aceite de oliva que cubra justo el fondo y dora los trozos de pollo con un poco de sal hasta que queden con 
+                        un toque doradito por todos lados. Yo lo que hago es ir dándoles la vuelta con unas pinzas de cocina, y se tardan 
+                        unos 10 minutos. Reserva en un plato aparte.
+                        <a href="arrozConPollo.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tagliatelle Carbonara</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
-                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
-                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                        <p><h1 class="cabecera_receta">Tagliatelle carbonara</h1>
+                        Como la elaboración es muy rápida, empieza cociendo la pasta y mientras tienes tiempo para preparar el resto de la receta.
+                        Pon abundante agua a cocer en una olla con una cucharadita de postre de sal y a fuego fuerte.
+                        Cuando hierva el agua echa los tagliatelle y en cuanto hierva el agua de nuevo (tardará muy poco) 
+                        empieza a contar los minutos que indique el paquete. En mi caso han sido 12 minutos.
+                        Cuando esté lista la pasta escúrrela.
+                        <a href="tagliatelleCarbonara.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tortenilli con Carrilleras</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
-                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
-                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                        <p><h1 class="cabecera_receta">Tortenilli con carrilleras</h1>
+                        Lo ideal es que el relleno de la pasta fresca siempre esté frío en el momento de utilizarlo así que es lo que 
+                        primero hay que preparar. En este caso sigue mi receta de carrilladas o carrilleras de cerdo al vino tinto, que puedes 
+                        elaborar incluso con 1 o 2 días de antelación. Prepara solamenta la mitad de la receta porque necesitarás 4 carrilleras, una por persona.
+                        <a href="tortenilliConCarrilleras.html">Leer más...</a></p>
                     </article>
                 </section>
             </div>
