--- a/pages/arrocesYpastas/tagliatelleCarbonara.html
+++ b/pages/arrocesYpastas/tagliatelleCarbonara.html
@@ -24,7 +24,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-9">
-                            <img class="img-fluid" src="../../img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
+                            <img class="img-fluid" src="../..//img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
                         </div>
                     </div>    
                 </div>
@@ -36,7 +36,7 @@
                             <a href="http://www.instagram.com" target="_blank"><img class="redes-sociales" src="../../img/instagram.png" alt="Instagram Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
-                            <a href="https://twitter.com/RecetasAbu" target = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
+                            <a href="https://twitter.com/RecetasAbu" target="_blank" = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
                             <a href="https://www.facebook.com/profile.php?id=100047956301415" target="_blank"><img class="redes-sociales" src="../../img/facebook2.png" alt="Facebook Las Recetas Abuela"/></a>
@@ -56,50 +56,58 @@
                         <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
                         <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
                         <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>  
-                    </ul>	
+                    </ul>
                 </div>
             </div>
         </div> <!-- este div cierra el menú-->
         <div class="row"> <!-- Este div da inicio al cuerpo -->
             <div class="col-9">
-                <!-- Sección de novedades-->
+                <!-- Cabecera de recetas-->
                 <section>
                     <article>
-                        <p><h1 class="h1_cabecera_seccion">Postres</h1>
+                        <p><h1 class="h1_cabecera_seccion">Tagliatelle carbonara</h1></p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-6 py-3">
+                                <img src="../../img/recetas/arrocesPastas/tagliatelle carbonara.jpg" class="img-fluid">
+                            </div>
+                            <div class="col-6 py-3">
+                                <h1 class="cabecera_receta">Ingredientes</h1>
+                                <hr>
+                                <ul>
+                                    <li>500 gr de tagliatelle.</li>
+                                    <li>100 gr de panceta. Lo tradicional es utilizar guanciale pero no suele ser fácil de encontrar.</li>
+                                    <li>3 huevos.</li>
+                                    <li>70 gr de queso parmesano, pecorino o grana padano.</li> 
+                                    <li>Sal y pimienta negra recién molida.</li>
+                                </ul>
+                            </div>
+                        </div>
                         
-                        <img src="../../img/recetas/postres/postres.jpg" alt="postres" class="img-fluid">
                         <hr>
-                        <h1 class="cabecera_receta">Arroz con leche</h1>
-                        Primero vamos a aromatizar la leche en la que coceremos el arroz. 
-                        Para ello echa en una olla la leche junto con el azúcar, las ramas de canela y 
-                        la cáscara de limón, y ponla a fuego medio hasta que hierva, es decir, hasta que veas que empieza a burbujear.
-                        <a href="arrozConLeche.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <span class="enfasis_recetas">Preparación:</span> 30 min - <span class="enfasis_recetas">Comensales:</span> 2 - <span class="enfasis_recetas">Tipo de comida:</span> Entrante
                         <hr>
-                        <p><h1 class="cabecera_receta">Natillas</h1>
-                        Quítale la piel al limón pero solo la parte más superficial de forma que no 
-                        arrastre parte blanca, solo debe ser amarilla. La parte blanca amarga y por eso no nos interesa.
-                        En un cazo a fuego medio pon la leche junto con la rama de canela y la piel del limón. 
-                        <a href="natillas.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <h1 class="cabecera_receta">¡A cocinar!</h1>
                         <hr>
-                        <p><h1 class="cabecera_receta">Rosquillas</h1>
-                            Pon la mantequilla en un recipiente apto para microondas y derrítela en el microondas.
-                            Prueba con 30 segundos y sácala cuando aún quede un poco de parte sólida porque al sacarla 
-                            y moverla un poco terminará de derretirse y así evitarás que pueda salpicar en el microondas.
-                            Lava bien la naranja y el limón y ralla la mitad de la piel de cada uno con un buen rallador.
-                            <a href="rosquillas.html">Leer más...</a></p>
+                        <p>Como la elaboración es muy rápida, empieza cociendo la pasta y mientras tienes tiempo para preparar el resto de la receta.
+                        Pon abundante agua a cocer en una olla con una cucharadita de postre de sal y a fuego fuerte.
+                        Cuando hierva el agua echa los tagliatelle y en cuanto hierva el agua de nuevo (tardará muy poco) 
+                        empieza a contar los minutos que indique el paquete. En mi caso han sido 12 minutos.
+                        Cuando esté lista la pasta escúrrela.</p>
+                        <p>Mientras se cuece la pasta prepara el resto de la receta para tenerlo todo listo cuando ésta esté cocida.
+                        Corta la panceta en tiritas finas y, en una sartén antiadherente en la que después te quepa toda la pasta, 
+                        saltéala a fuego medio para que se dore ligeramente. Reserva.
+                        En un bol bate los huevos con unas varillas. Ralla el queso parmesano y añádelo al bol junto con un poco 
+                        de pimienta negra molida y sal. Mezcla bien para que se fusione todo.</p>
+
+                        <p>Ahora es cuando viene el verdadero truco para elaborar la perfecta carbonara: cuando los tagliatelle 
+                        estén listos y escurridos, aprovechando que siguen bien calientes tras su cocción, échalos a la sartén 
+                        (que estará fuera del fuego) con la panceta y mezcla durante un minuto. Para este proceso final de mezclar la pasta 
+                        te recomiendo utilizar el típico tenedor grande de pasta ya que eso permite mezclar sin romperlos.
+                        Añade la mezcla de huevos y queso y remueve suavemente para que impregne bien toda la pasta. De esta forma
+                        el propio calor de los espaguetis hará que el huevo se cuaje ligeramente y el resultado quede cremoso pero no crudo.</p>
                     </article>
-                    <article>
-                        <hr>
-                        <p><h1 class="cabecera_receta">Torrijas</h1>
-                        Pela un limón intentando que la piel quede con el mínimo posible de parte blanca para que no amargue.
-                        Lo primero que vamos a hacer es infusionar la leche. Ponla en un cazo a fuego medio-alto junto con la 
-                        rama de canela y la piel del limón hasta que hierva. 
-                        <a href="torrijas.html">Leer más...</a></p>
-                    </article>
+                    
                 </section>
             </div>
             <div class="col-3">
@@ -122,13 +130,13 @@
                         <hr>
                     </div>
                 </aside>
+                </div>
             </div>
-        </div>
-    </div> <!-- este div cierra el cuerpo -->
-    <footer class="cabecera text-center"> <!-- Inicio footer -->
-        <p>2020 &copy; Recetas de la Abuela</p>
-    </footer> <!-- Fin footer -->
-</div><!-- este div cierra el container fluid principal -->
+        </div> <!-- este div cierra el cuerpo -->
+        <footer class="cabecera text-center"> <!-- Inicio footer -->
+            <p>2020 &copy; Recetas de la Abuela</p>
+        </footer> <!-- Fin footer -->
+    </div><!-- este div cierra el container fluid principal -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -140,4 +148,5 @@
         crossorigin="anonymous"></script>
     <script src="../../js/bootstrap.min.js"></script>
 </body>
+
 </html>
