--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -121,14 +121,14 @@
                         <!-- Fin del formulario-->
                         <hr>
                         <h1 class="cabecera_receta">Página web realizada por:</h1>
-                        Esta página ha sido desarrollada para el módulo de lenguaje de marcas del CFGS de Desarrollo de
-                        aplicaciones web exclusivamente para uso didáctico. Nada de lo aquí reflejado servirá para ninguna reclamación o queja sobre la página
-                        web o su contenido.</a></p>
+                        <a href="https://github.com/hipema" target="_blank">Manuel Hidalgo Pérez</a></h4></p></article></a></p>
+						<a href="https://github.com/manuelbg7" target="_blank">Manuel Brito Guerrero</a></h4></p></article></a></p>
+                        <a href="https://github.com/kiquevedder87" target="_blank">Enrique Barbudo Ordóñez</a></h4></p></article></a></p>
                         <hr>
                         <h1 class="cabecera_receta">Advertencia</h1>
                         Esta página ha sido desarrollada para el módulo de lenguaje de marcas del CFGS de Desarrollo de
                         aplicaciones web exclusivamente para uso didáctico. Nada de lo aquí reflejado servirá para ninguna reclamación o queja sobre la página
-                        web o su contenido.</a></p>
+                        web o su contenido. Las imágenes usadas son libres de derechos de uso y el contenido de las recetas ha sido obtenido de la web <a href="http://www.recetasdeescandalo.com" target="_blank">www.recetasdeescandalo.com</a></p>
 
                     </article>
                         
