--- a/pages/pescados/pulpo.html
+++ b/pages/pescados/pulpo.html
@@ -24,7 +24,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-9">
-                            <img class="img-fluid" src="../../img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
+                            <img class="img-fluid" src="../..//img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
                         </div>
                     </div>    
                 </div>
@@ -36,7 +36,7 @@
                             <a href="http://www.instagram.com" target="_blank"><img class="redes-sociales" src="../../img/instagram.png" alt="Instagram Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
-                            <a href="https://twitter.com/RecetasAbu" target = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
+                            <a href="https://twitter.com/RecetasAbu" target="_blank" = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
                             <a href="https://www.facebook.com/profile.php?id=100047956301415" target="_blank"><img class="redes-sociales" src="../../img/facebook2.png" alt="Facebook Las Recetas Abuela"/></a>
@@ -56,51 +56,65 @@
                         <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
                         <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
                         <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>  
-                    </ul>	
+                    </ul>
                 </div>
             </div>
         </div> <!-- este div cierra el menú-->
         <div class="row"> <!-- Este div da inicio al cuerpo -->
             <div class="col-9">
-                <!-- Sección de novedades-->
+                <!-- Cabecera de recetas-->
                 <section>
                     <article>
-                        <p><h1 class="h1_cabecera_seccion">Pescados</h1>
+                        <p><h1 class="h1_cabecera_seccion">Pulpo</h1></p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-6 py-3">
+                                <img src="../../img/recetas/pescados/pulpo.jpg" class="img-fluid">
+                            </div>
+                            <div class="col-6 py-3">
+                                <h1 class="cabecera_receta">Ingredientes</h1>
+                                <hr>
+                                <ul>
+                                    <li>Pulpo. La cantidad depende de cuanto quieras hacer</li>
+                                    <li>Patatas</li>
+                                    <li>Sal gruesa.</li>
+                                    <li>Pimentón (dulce o picante, según prefieras, pero nunca ahumado ya que destaca demasiado)</li> 
+                                    <li>Aceite de oliva virgen extra</li>
+									<ul>
+                            </div>
+                        </div>
                         
-                        <img src="../../img/recetas/pescados/pescados.jpg" alt="pescados" class="img-fluid">
                         <hr>
-                        <h1 class="cabecera_receta">Calamares</h1>
-                        Empezamos limpiando los calamares aunque puedes saltarte este paso si vas a utilizar anillas
-						de calamar. Reconozco que hay que tener un poco de paciencia, pero es sencillo:
-                        Agarra la bolsa y tira de las patas. Idealmente con las patas saldrán las tripas.
-                        <a href="calamares.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <span class="enfasis_recetas">Preparación:</span> 50 min - <span class="enfasis_recetas">Comensales:</span> 4 - <span class="enfasis_recetas">Tipo de comida:</span> Principal
                         <hr>
-                        <p><h1 class="cabecera_receta">Merluza</h1>
-						El primer truco para que la merluza quede perfecta es que sea fresca ya que la merluza congelada 
-						tiende a quedar bastante más seca y además se desmiga con facilidad.
-						Antes de ponerte a cocinar la merluza deberás tener listo todo lo demás, tanto la guarnición como el 
-                        aliño o salsa que vaya a acompañarla.
-                        <a href="merluza.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <h1 class="cabecera_receta">¡A cocinar!</h1>
                         <hr>
-                        <p><h1 class="cabecera_receta">Pulpo</h1>
-                        Cuando el pulpo ha estado congelado queda mucho más tierno así que, si puedes, 
+                        <p>Cuando el pulpo ha estado congelado queda mucho más tierno así que, si puedes, 
 						congélalo nada más comprarlo y descongélalo cuando vayas a cocerlo. 
 						Si es muy grande puedes aprovechar para dividirlo en varias porciones y así sacar 
-                        solo una porción del congelador para cocerla.
-                        <a href="pulpo.html">Leer más...</a></p>
+						solo una porción del congelador para cocerla.
+						Limpia muy bien el pulpo: separa la cabeza de las patas y vacíala bien, retira los ojos y déjala impoluta. 
+						Limpia muy bien cada tentáculo de las patas bajo un chorro de agua fría.</p>
+                        <p>Limpia las patatas muy muy bien ya que vamos a cocerlas con la piel y junto con el pulpo.
+						En una olla añade suficiente agua para que cubra el pulpo y pon la temperatura del fuego alta
+						 para que el agua llegue a ebullición.
+						Cuando eso ocurra, separa las patas del pulpo y sumerge cada pieza, de una en una, en el agua 
+						hirviendo 3 veces dándole «sustos»: mete cada pata sujetándola por los dedos (cuidado, no te quemes!) 
+						o con unas pinzas de cocina, que esté en el agua 2-3 segundos y vuélvela a sacar. 
+						Repite este proceso 3 veces, y a la tercera vez deja la pata dentro de la olla. 
+						Haz lo mismo con cada pata y la cabeza.</p>
+						<p>Cuando el agua esté hirviendo con todo el pulpo dentro, cuenta a partir de ahí 30 minutos
+						 (o 40 si es muy grande) y mantén el fuego fuerte, y cuando te queden 20 minutos de cocción
+						 introduce también las patatas.
+						Si utilizas una olla a presión como la nuestra el tiempo se reduce considerablemente hasta 
+						los 5-8 minutos, dependiendo del tamaño del pulpo. Nosotros lo preparamos siempre así y es un gustazo 
+						poder cocer el pulpo con sus patatas de forma tan rápida. Para hacerlo así cierra la olla y en cuanto veas 
+						las 2 anillas rojas empieza a contar el tiempo, 5 minutos para pulpos pequeños y 8 para pulpos grandes. 
+						Cuando se cumpla el tiempo apaga el fuego, aparta la olla, espera a que el pitorro baje totalmente y ya puedes abrirla.
+
+						Escúrrelo con cuidado y ya lo tienes listo.</p>
                     </article>
-                    <article>
-                        <hr>
-                        <p><h1 class="cabecera_receta">Rape</h1>
-						Precalienta el horno a 180ºC con calor arriba y abajo y ventilador
-						Pela la cebolla, córtala por la mitad y después en tiras
-                        Reparte la cebolla en la bandeja de horno que vayas a utilizar y échale un poco de sal.
-                        <a href="rape.html">Leer más...</a></p>
-                    </article>
+                    
                 </section>
             </div>
             <div class="col-3">
@@ -123,13 +137,13 @@
                         <hr>
                     </div>
                 </aside>
+                </div>
             </div>
-        </div>
-    </div> <!-- este div cierra el cuerpo -->
-    <footer class="cabecera text-center"> <!-- Inicio footer -->
-        <p>2020 &copy; Recetas de la Abuela</p>
-    </footer> <!-- Fin footer -->
-</div><!-- este div cierra el container fluid principal -->
+        </div> <!-- este div cierra el cuerpo -->
+        <footer class="cabecera text-center"> <!-- Inicio footer -->
+            <p>2020 &copy; Recetas de la Abuela</p>
+        </footer> <!-- Fin footer -->
+    </div><!-- este div cierra el container fluid principal -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -141,4 +155,5 @@
         crossorigin="anonymous"></script>
     <script src="../../js/bootstrap.min.js"></script>
 </body>
+
 </html>
